--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,29 +1,29 @@
 <form class="form-signin">
-  <h1 class="h3 mb-3 font-weight-normal">ورد به بخش مدیریت</h1>
-  <label for="inputEmail" class="sr-only">آدرس ایمیل</label>
+  <h1 class="h3 mb-3 font-weight-normal">Login panel/h1>
+  <label for="inputEmail" class="sr-only">Email Address</label>
   <input
     type="email"
     id="inputEmail"
     class="form-control"
-    placeholder="ایمیل"
+    placeholder="Email"
     required
     autofocus
   />
-  <label for="inputPassword" class="sr-only">کلمه عبور</label>
+  <label for="inputPassword" class="sr-only">password</label>
   <input
     type="password"
     id="inputPassword"
     class="form-control"
-    placeholder="کلمه عبور"
+    placeholder="password"
     required
   />
   <div class="checkbox mb-3">
     <label>
-      <input type="checkbox" value="remember-me" /> من رو به خاطر بسپار
+      <input type="checkbox" value="remember-me" /> remember me
     </label>
   </div>
   <button class="btn btn-lg btn-primary btn-block" type="submit">
-    ورود
+    Login
   </button>
   
 </form>
