--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <form class="form-signin">
-  <h1 class="h3 mb-3 font-weight-normal">Login panel/h1>
+  <h1 class="h3 mb-3 font-weight-normal">Login panel</h1>
   <label for="inputEmail" class="sr-only">Email Address</label>
   <input
     type="email"
@@ -18,12 +18,7 @@
     required
   />
   <div class="checkbox mb-3">
-    <label>
-      <input type="checkbox" value="remember-me" /> remember me
-    </label>
+    <label> <input type="checkbox" value="remember-me" /> remember me </label>
   </div>
-  <button class="btn btn-lg btn-primary btn-block" type="submit">
-    Login
-  </button>
-  
+  <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
 </form>
