Added action to form

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,4 @@
-<form class="form-signin">
+<form class="form-signin" action="/users/login" method="post">
   <h1 class="h3 mb-3 font-weight-normal">Login panel</h1>
   <label for="inputEmail" class="sr-only">Email Address</label>
   <input
