--- a/views/register.ejs
+++ b/views/register.ejs
@@ -42,7 +42,7 @@
 
   <div class="checkbox mb-3">
     <label>
-      <input type="checkbox" /> <a href="/users/login"></a>Already have account
+      <a href="/users/login">Already have account</a>
     </label>
   </div>
   <button class="btn btn-lg btn-primary btn-block" type="submit">
