Show validator errors

--- a/views/layouts/mainLayout.ejs
+++ b/views/layouts/mainLayout.ejs
@@ -14,5 +14,7 @@
   </head>
   <body>
     <%- body %>
+    <script src="/js/jquery.slim.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
   </body>
 </html>
