--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,5 @@
 <form class="form-signin" action="/users/register" method="POST">
+  <%- include("./includes/messages.ejs") %>
   <h1 class="h3 mb-3 font-weight-normal">Register panel</h1>
   <label for="inputFullname" class="sr-only">Name</label>
   <input
