fix Object show errors

--- a/views/includes/messages.ejs
+++ b/views/includes/messages.ejs
@@ -1,6 +1,6 @@
 <% if(typeof errors !== 'undefined') { %> <% errors.forEach(function(error){%>
 <div class="alert alert-danger alert-dismissible fade show" role="alert">
-  <%= error %>
+  <%= error.message %>
   <button type="button" class="close" data-dismiss="alert" aria-label="close">
     <span aria-hidden="true">&times;</span>
   </button>
