--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,6 @@
 <form class="form-signin" action="/users/login" method="post">
   <h1 class="h3 mb-3 font-weight-normal">Login panel</h1>
+  <%- include('./includes/loginMessage.ejs') %>
   <label for="inputEmail" class="sr-only">Email Address</label>
   <input
     type="email"
