--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,6 +4,7 @@
   <label for="inputEmail" class="sr-only">Email Address</label>
   <input
     type="email"
+    name="email"
     id="inputEmail"
     class="form-control"
     placeholder="Email"
@@ -13,6 +14,7 @@
   <label for="inputPassword" class="sr-only">password</label>
   <input
     type="password"
+    name="password"
     id="inputPassword"
     class="form-control"
     placeholder="password"
