--- a/views/includes/loginMessage.ejs
+++ b/views/includes/loginMessage.ejs
@@ -5,4 +5,11 @@
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
+<% } %> <% if(error.length > 0) {%>
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <%= error %>
+  <button type="button" class="close" data-dismiss="alert" aria-label="close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
 <% } %>
