--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
   <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#"
-    >Weblog dashboard</a
-  >
+    >Hi <%= fullname %>
+  </a>
   <button
     class="navbar-toggler position-absolute d-md-none collapsed"
     type="button"
@@ -21,7 +21,7 @@
   />
   <ul class="navbar-nav px-3">
     <li class="nav-item text-nowrap">
-      <a class="nav-link" href="#">Sign out</a>
+      <a class="nav-link" href="/users/logout">Sign out</a>
     </li>
   </ul>
 </nav>
@@ -91,24 +91,6 @@
               Settings
             </a>
           </li>
-          <!-- <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Last quarter
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Social engagement
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="file-text"></span>
-              Year-end sale
-            </a>
-          </li> -->
         </ul>
       </div>
     </nav>
