--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,9 @@
     required
   />
   <div class="checkbox mb-3">
-    <label> <input type="checkbox" value="remember-me" /> remember me </label>
+    <label>
+      <input name="remember" type="checkbox" value="remember-me" /> remember me
+    </label>
   </div>
   <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
 </form>
