--- a/views/layouts/mainLayout.ejs
+++ b/views/layouts/mainLayout.ejs
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/css/font-awesome.css" />
     <% if (path === '/login' || path === '/register') { %>
     <link rel="stylesheet" href="/css/signin.css" />
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
     <% } %> <% if (path === '/404') { %>
     <link rel="stylesheet" href="/css/404.css" />
     <% } %>
