--- a/views/layouts/dashLayout.ejs
+++ b/views/layouts/dashLayout.ejs
@@ -39,8 +39,54 @@
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/bootstrap-rtl.css" />
     <link rel="stylesheet" href="/css/font-awesome.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ckeditor/4.15.1/ckeditor.js" integrity="sha512-aThGT4RJc95+zt2vrs8iMjrFpsJxcFclp7tweVls6/3cNo3GWvGvtLV576o8Kdvdf3fJhrrG3wkmoea/KJMLFQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </head>
   <body>
-    <%- body %>
+  <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+    <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#"
+    >Hi <%= fullname %>
+    </a>
+    <button
+            class="navbar-toggler position-absolute d-md-none collapsed"
+            type="button"
+            data-toggle="collapse"
+            data-target="#sidebarMenu"
+            aria-controls="sidebarMenu"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <input
+            class="form-control form-control-dark w-100"
+            type="text"
+            placeholder="Search"
+            aria-label="Search"
+    />
+    <ul class="navbar-nav px-3">
+      <li class="nav-item text-nowrap">
+        <a class="nav-link" href="/users/logout">Sign out</a>
+      </li>
+    </ul>
+  </nav>
+
+  <div class="container-fluid">
+    <div class="row">
+
+      <%- include('../private/dashSidebar.ejs')%>
+      <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
+        <%- body %>
+      </main>
+    </div>
+  </div>
+  <script>
+    CKEDITOR.replace("body",{
+      language : "en",
+
+    })
+  </script>
+  <script src="/js/jquery.slim.min.js"></script>
+
+  <script src="/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
