--- a/views/private/addPost.ejs
+++ b/views/private/addPost.ejs
@@ -1,32 +1,39 @@
 <h3 class="mt-2 text-center">New Post</h3>
 <div class="d-flex align-items-center justify-content-center">
-    <form action="/dashboard/add-post" class="w-50" method="POST">
-        <div class="form-group">
-            <label for="title">Title</label>
-            <input
-                    type="text"
-                    class="form-control w-50"
-                    name="title"
-                    id="title"
-            />
-        </div>
+  <form action="/dashboard/add-post" class="w-50" method="POST">
+    <div class="form-group">
+      <label for="title">Title</label>
+      <input type="text" class="form-control w-50" name="title" id="title" />
+    </div>
 
-        <div class="form-group">
-            <label for="status">Status</label>
-            <select name="status" class="form-control w-25" id="status">
-                <option value="public" selected>Public</option>
-                <option value="private">Private</option>
-            </select>
-        </div>
+    <div class="form-group">
+      <label for="status">Status</label>
+      <select name="status" class="form-control w-25" id="status">
+        <option value="public" selected>Public</option>
+        <option value="private">Private</option>
+      </select>
+    </div>
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <button class="btn btn-sm btn-secondary" type="button" id="imageUpload">
+          upload image
+        </button>
+      </div>
+      <div class="custom-file">
+        <input type="file" class="custom-file-input" id="selectedImage" />
+        <label id="imageStatus" class="custom-file-label" for="selectedImage">
+          select image
+        </label>
+      </div>
+    </div>
+    <div class="form-group">
+      <h5>Text Body</h5>
+      <textarea name="body" class="form-control" id="body"></textarea>
+    </div>
 
-        <div class="form-group">
-            <h5>Text Body</h5>
-            <textarea name="body" class="form-control" id="body"></textarea>
-        </div>
-
-        <div class="row">
-            <input type="submit" value="Create post " class="btn btn-success m-2" />
-            <a href="/dashboard" class="btn btn-warning m-2">Cancel</a>
-        </div>
-    </form>
+    <div class="row">
+      <input type="submit" value="Create post " class="btn btn-success m-2" />
+      <a href="/dashboard" class="btn btn-warning m-2">Cancel</a>
+    </div>
+  </form>
 </div>
