--- a/views/private/addPost.ejs
+++ b/views/private/addPost.ejs
@@ -1,4 +1,7 @@
 <h3 class="mt-2 text-center">New Post</h3>
+<div class="w-50 mx-auto">
+  <%- include("../includes/validationErrors.ejs") %>
+</div>
 <div class="d-flex align-items-center justify-content-center">
   <form action="/dashboard/add-post" class="w-50" method="POST">
     <div class="form-group">
