--- a/views/private/addPost.ejs
+++ b/views/private/addPost.ejs
@@ -29,6 +29,18 @@
         </label>
       </div>
     </div>
+    <div id="progressDiv" style="display: none">
+      <div class="progress">
+        <div
+          id="progressBar"
+          class="progress-bar progress-bar-striped progress-bar-animated"
+          role="progressbar"
+          aria-valuemin="0"
+          aria-valuemax="100"
+        ></div>
+      </div>
+    </div>
+
     <div class="form-group">
       <h5>Text Body</h5>
       <textarea name="body" class="form-control" id="body"></textarea>
