--- a/views/private/addPost.ejs
+++ b/views/private/addPost.ejs
@@ -41,6 +41,11 @@
       </div>
     </div>
 
+    <div class="w-100 bg-light text-center">
+      <p id="uploadResult" class="overflow-auto"> image upload address</p>
+    </div>
+
+
     <div class="form-group">
       <h5>Text Body</h5>
       <textarea name="body" class="form-control" id="body"></textarea>
